2000-09-11  Dave Love  <fx@gnu.org>

	* Changelog: Use iso-2022 coding.

	* gnus-msg.el (gnus-msg-mail): New function.
	(gnus-user-agent): New mail agent.

2000-09-10  Dave Love  <fx@gnu.org>

	* message.el: Require mail-abbrevs for XEmacs for a problem with
	keybinding despite the autoloads for it.

2000-09-08  Simon Josefsson  <simon@josefsson.org>

	* imap.el (imap-kerberos4-open): Erase more (fixes race condition?).

	* nnimap.el (nnimap-request-update-info-internal): Remove tick
	marks from dormant articles. (See nnimap-request-set-mark.)
	(nnimap-retrieve-headers-progress): Demule.
	(nnimap-open-server): Call nnoo-change-server twice, once for
	getting the nnimap-server-buffer and once for letting n-c-s set
	the variables in that buffer.

2000-09-08  David Edmondson <dme@dme.org>

	* gnus.el (gnus-short-group-name): Guess separator.

2000-09-07  Tadashi Watanabe  <watanabe@sigmaitec.co.jp>

	* smiley.el (smiley-buffer, smiley-create-glyph): Work with GTK
	XEmacs as well.

2000-09-06  Francis Litterio <franl-removethis@world.omitthis.std.com>

	* gnus-group.el (gnus-group-insert-group-line): Fix.

2000-09-04  Dave Love  <fx@gnu.org>

	* mm-decode.el (mime-display) <defgroup>: Add `multimedia' group.
	(mm-get-image): Avoid the losing `make-glyph' from W3.

2000-09-03  Simon Josefsson  <simon@josefsson.org>

	* gnus-sum.el (gnus-summary-delete-article): Check server.

2000-09-01  Simon Josefsson  <simon@josefsson.org>

	* imap.el (imap-parse-flag-list): Rewrite.

	* nnimap.el (nnimap-retrieve-headers-from-file): Ignore errors.

	* imap.el (imap-parse-flag-list): Hack.

2000-08-29  Dave Love  <fx@gnu.org>

	* gnus-mlspl.el (gnus-group-split-fancy): Eschew mapcon.

	* dgnushack.el (mapcon, union): Remove compiler macros.

	* gnus-agent.el (gnus-agent-union): new function.
	(gnus-agent-fetch-headers): Use it.

	* gnus.el (gnus-group-startup-message): Specify foreground and
	background for xpm image.  Centre image vertically.